# Project-Copilot

./: README.md  pyproject.toml
src/sqe_project/: __init__.py  agent_output.md  agents.py  main.py  tasks.py
